--- a/AppPrinterTest/AppPrinterTest.iOS/Info.plist
+++ b/AppPrinterTest/AppPrinterTest.iOS/Info.plist
@@ -50,5 +50,7 @@
 	<string>LaunchScreen</string>
 	<key>CFBundleName</key>
 	<string>AppPrinterTest</string>
+	<key>NSBluetoothPeripheralUsageDescription</key>
+	<string>This app uses bluetooth in order to access the receipt printer</string>
 </dict>
 </plist>
